--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.gooddata</groupId>
     <artifactId>gooddata-java</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>../gooddata-jmitest</module>
+    </modules>
 
     <properties>
         <targetJdk>1.7</targetJdk>
