--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,37 @@
     <groupId>com.gooddata</groupId>
     <artifactId>gooddata-java</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>${project.artifactId}</name>
+    <description>GoodData Java SDK</description>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
+    <licenses>
+        <license>
+            <name>BSD License</name>
+            <url>http://opensource.org/licenses/BSD-3-Clause</url>
+        </license>
+    </licenses>
+    <scm>
+        <url>git@github.com:martiner/java.git</url>
+        <connection>scm:git:git@github.com:martiner/java.git</connection>
+        <developerConnection>scm:git:${basedir}</developerConnection>
+    </scm>
+    <developers>
+        <developer>
+            <name>Martin Caslavsky</name>
+        </developer>
+        <developer>
+            <name>Libor Rysavy</name>
+        </developer>
+        <developer>
+            <name>Jiri Mikulasek</name>
+        </developer>
+    </developers>
 
     <properties>
         <targetJdk>1.7</targetJdk>
