--- a/pom.xml
+++ b/pom.xml
@@ -48,12 +48,29 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
                     <source>${targetJdk}</source>
                     <target>${targetJdk}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Name>com/gooddata</Name>
+                            <Specification-Title>${project.description}</Specification-Title>
+                            <Specification-Version>${project.version}</Specification-Version>
+                            <Specification-Vendor>GoodData</Specification-Vendor>
+                            <Implementation-Title>HttpComponents ${project.description}</Implementation-Title>
+                            <Implementation-Version>${project.version}</Implementation-Version>
+                            <Implementation-Vendor>GoodData</Implementation-Vendor>
+                            <Implementation-Vendor-Id>com.gooddata</Implementation-Vendor-Id>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
