--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
             <artifactId>sardine</artifactId>
             <version>5.1</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.testng</groupId>
