--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cz.geek</groupId>
     <artifactId>gooddata-java</artifactId>
-    <version>0.10.1-SNAPSHOT</version>
+    <version>0.11.0</version>
     <name>${project.artifactId}</name>
     <description>GoodData Java SDK</description>
 
@@ -163,7 +162,7 @@
                                     <goal>check</goal>
                                 </goals>
                                 <configuration>
-                                    <rules/>
+                                    <rules />
                                 </configuration>
                             </execution>
                         </executions>
