--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,12 @@
             <version>1.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.shazam</groupId>
+            <artifactId>shazamcrest</artifactId>
+            <version>0.7</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
