--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>cz.geek</groupId>
     <artifactId>gooddata-java</artifactId>
-    <version>0.14.0</version>
+    <version>0.14.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>GoodData Java SDK</description>
 
