--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,19 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <!-- usage: mvn nexus-staging:release -->
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.6</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>sonatype-nexus-staging</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <!--description>${project.version}</description-->
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
