build: add Oracle JDK 8 and JavaDocs to Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: java
 install: true
-script: mvn verify coveralls:report -Pcoverage
+script: mvn verify javadoc:javadoc coveralls:report -Pcoverage
 jdk:
   - openjdk7
+  - oraclejdk8
 branches:
   only:
      - master
