--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.gooddata</groupId>
     <artifactId>gooddata-java</artifactId>
-    <version>1.5.3-SNAPSHOT</version>
+    <version>1.6.0</version>
     <name>${project.artifactId}</name>
     <description>GoodData Java SDK</description>
     <url>https://github.com/martiner/gooddata-java</url>
