--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
     <dependencies>
         <dependency>
             <groupId>com.gooddata</groupId>
+            <artifactId>gooddata-rest-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.gooddata</groupId>
             <artifactId>gooddata-http-client</artifactId>
             <version>0.9.4</version>
         </dependency>
