Decouple from HttpClient
* Added abstraction layer enabling usage of alternative HTTP layer
(under spring's RestTemplate)
* Making the DataStoreService optional

--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,7 @@
                 <groupId>com.github.lookfirst</groupId>
                 <artifactId>sardine</artifactId>
                 <version>5.8</version>
+                <optional>true</optional>
             </dependency>
             <dependency>
                 <groupId>joda-time</groupId>
