Add Sonar exclusions to prevent false positives

--- a/.sonar.settings
+++ b/.sonar.settings
@@ -1,2 +1,3 @@
 # Settings for sonar scan
 gdc.java_version=openjdk-11
+sonar.exclusions=**/target/surefire-reports/**,**/target/failsafe-reports/**
