--- a/gooddata-java/pom.xml
+++ b/gooddata-java/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>gooddata-java</artifactId>
+    <name>${project.artifactId}</name>
 
     <parent>
         <artifactId>gooddata-java-parent</artifactId>
