JIRA:GRIF-315 upgrade to httpclient5

--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,11 @@
         <json-unit.version>2.38.0</json-unit.version>
         <surefire.version>3.1.2</surefire.version>
         <failsafe.version>3.1.2</failsafe.version>
-        <httpclient.version>4.5.14</httpclient.version>
-        <httpcore.version>4.4.16</httpcore.version>
+        <httpclient5.version>5.2.3</httpclient5.version>
+        <httpcore5.version>5.2.4</httpcore5.version>
+        <!-- HttpClient 4.x for Sardine compatibility -->
+        <httpclient4.version>4.5.14</httpclient4.version>
+        <httpcore4.version>4.4.16</httpcore4.version>
 
         <!-- Hardcoded value, so the license:check doesn't break builds at the New Year.
         Change to current year value together with headers in all source files and first license in LICENSE.txt. -->
@@ -320,16 +323,33 @@ LICENSE.txt file in the root directory of this source tree.</inlineHeader>
         </dependency>            <!-- Override specific versions where needed -->
             
 
-            <!-- Use HttpClient 4.x with Spring 6 compatibility layer -->
+            <!-- Use HttpClient 5.x -->
+            <dependency>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>${httpclient5.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents.core5</groupId>
+                <artifactId>httpcore5</artifactId>
+                <version>${httpcore5.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents.core5</groupId>
+                <artifactId>httpcore5-h2</artifactId>
+                <version>${httpcore5.version}</version>
+            </dependency>
+
+            <!-- HttpClient 4.x for Sardine library -->
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
-                <version>${httpclient.version}</version>
+                <version>${httpclient4.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpcore</artifactId>
-                <version>${httpcore.version}</version>
+                <version>${httpcore4.version}</version>
             </dependency>
 
             
@@ -355,7 +375,7 @@ LICENSE.txt file in the root directory of this source tree.</inlineHeader>
             <dependency>
                 <groupId>com.gooddata</groupId>
                 <artifactId>gooddata-http-client</artifactId>
-                <version>1.0.0</version>
+                <version>2.0.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
